# vindex-infer

./: .gitignore  Cargo.toml  HUGGINGFACE_POST.md  LICENSE  LINKEDIN_POST.md  README.md
paper/: PAPER.md
src/: inference.rs  main.rs  vindex.rs
